--- a/Android_app/build.gradle
+++ b/Android_app/build.gradle
@@ -2,7 +2,9 @@
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+    id 'com.chaquo.python' version '12.0.0' apply false
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
