--- a/Android_app/settings.gradle
+++ b/Android_app/settings.gradle
@@ -4,6 +4,9 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    repositories {
+        maven { url "https://chaquo.com/maven" }
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
